test/semantic_errors/invalid_return3.mc
int main() {
    if (b) {
        return;
    } else {
        return;
    }
}